fix overlapping elements on product page + style improvements

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ body {
 
 .gradient-bg {
   background: rgb(126, 63, 204);
-  background: linear-gradient(90deg, rgba(126, 63, 204, 1) 0%, rgba(175, 126, 236, 1) 100%);
+  background: linear-gradient(90deg, #7e3fcc 0%, #af7eec 100%);
 }
 
 /*********************************/
@@ -95,7 +95,7 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #000000cc;
 }
 
 .jumbotron h1,
@@ -152,7 +152,7 @@ footer {
 .no-border {
   border: none;
   background: none;
-  padding: 0; /* Adjust padding if necessary */
+  padding: 0; 
 }
 
 .no-border:hover, .no-border:focus {
@@ -239,14 +239,13 @@ footer {
 }
 
 .input-group-text a {
-  /*centers mag icon*/
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .input-group .input-group-text:hover {
-  background-color: rgb(243, 243, 243);
+  background-color: #f3f3f3;
 }
 
 .nav-item {
@@ -263,7 +262,7 @@ footer {
 }
 
 #catalog .card:hover {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px #00000033;
 }
 /*********************************/
 
@@ -283,12 +282,12 @@ section > h2 span {
   border-width: 1px;
   border-radius: 5px;
   border-color: #828282;
-  background-color: rgb(255, 255, 255) !important;
+  background-color: #ffffff !important;
 }
 
 /*********************************/
 .counter {
-  background-color: rgb(234, 234, 234)!important;
+  background-color: #eee9f7;
   padding: 10px 0;
   border-radius: 10px;
 }
@@ -338,7 +337,7 @@ th .text-secondary {
 
 @media (max-width: 576px) {
   .jumbotron .pad-xs {
-      padding-left: 3rem; /* Adjust as needed */
-      padding-right: 3rem; /* Adjust as needed */
+      padding-left: 3rem; 
+      padding-right: 3rem;
   }
 }
